[package]
name = "dealocked"
version = "0.1.0"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
crossbeam = "0.8.0"
pin-utils = "0.1.0"
simplelog = "0.10.0"
log = "0.4.14"
